updated Glue YAML

--- a/.doc_gen/metadata/glue_metadata.yaml
+++ b/.doc_gen/metadata/glue_metadata.yaml
@@ -437,7 +437,7 @@ glue_GetTables:
           excerpts:
             - description:
               snippet_tags:
-                - glue.java2.get_tables.main
+                - glue.java2.get_table.main
     PHP:
       versions:
         - sdk_version: 3
@@ -1120,6 +1120,8 @@ glue_GetJob:
   services:
     glue: {GetJob}
 glue_Scenario_GetStartedCrawlersJobs:
+  title: Learn the Basics for &GLUDCLong; using an &AWS; SDK
+  title_abbrev: Learn &GLU; basic operations
   synopsis_list:
     - Create a crawler that crawls a public &S3; bucket and generates a database of CSV-formatted metadata.
     - List information about databases and tables in your &GLUDCLong;.
