--- a/.doc_gen/metadata/glue_metadata.yaml
+++ b/.doc_gen/metadata/glue_metadata.yaml
@@ -715,6 +715,15 @@ glue_GetJobRuns:
             - description:
               snippet_tags:
                 - Glue.dotnetv3.GetJobRuns
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.get_job.main
     PHP:
       versions:
         - sdk_version: 3
