--- a/.doc_gen/metadata/iam_metadata.yaml
+++ b/.doc_gen/metadata/iam_metadata.yaml
@@ -3355,8 +3355,6 @@ iam_Scenario_GroupBasics:
     iam: {AddUserToGroup, CreateGroup, CreateUser, CreateAccessKey, CreateRole, CreatePolicy, AttachRolePolicy, PutGroupPolicy,
           DeleteGroup, DeleteGroupPolicy, DeleteAccessKey, DeleteUser, RemoveUserFromGroup}
 iam_Scenario_CreateUserAssumeRole:
-  title: Learn core operations for &IAM; using an &AWS; SDK. 
-  title_abbrev: Create a user and assume a role
   synopsis: create a user and assume a role. &aws_sec_sdk_use-federation-warning;
   synopsis_list:
     - Create a user with no permissions.
@@ -3496,10 +3494,12 @@ iam_Scenario_CreateUserAssumeRole:
     iam: {CreateUser, CreateAccessKey, CreateRole, CreatePolicy, AttachRolePolicy, PutUserPolicy, DeleteUserPolicy, DetachRolePolicy,
           DeletePolicy, DeleteRole, DeleteAccessKey, DeleteUser}
 iam_Scenario_IamPolicyBuilder:
+  title: Work with the &IAM; Policy Builder API using an &AWS; SDK
+  title_abbrev: Work with the &IAM; Policy Builder API
   synopsis_list:
     - Create &IAM; policies by using the object-oriented API.
     - Use the &IAM; Policy Builder API with the &IAM; service.
-  category: Basics
+  category: Scenarios
   languages:
     Java:
       versions:
