--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -2844,7 +2844,7 @@ s3_Scenario_GettingStarted:
       versions:
         - sdk_version: 2
           github: javav2/example_code/s3
-          sdkguide:
+          sdkguides3.JavaScript.v3.cors.putBucketCors:
           excerpts:
             - description: A scenario example. 
               snippet_tags:
