Updated Glue Java V2 example (#6924)

--- a/.doc_gen/metadata/glue_metadata.yaml
+++ b/.doc_gen/metadata/glue_metadata.yaml
@@ -498,6 +498,15 @@ glue_GetTables:
     glue: {GetTables}
 glue_CreateJob:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.create_job.main
     .NET:
       versions:
         - sdk_version: 3
@@ -568,6 +577,15 @@ glue_CreateJob:
     glue: {CreateJob}
 glue_StartJobRun:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.start.job.main
     .NET:
       versions:
         - sdk_version: 3
@@ -715,6 +733,15 @@ glue_GetJobRuns:
             - description:
               snippet_tags:
                 - Glue.dotnetv3.GetJobRuns
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.get_job.main
     PHP:
       versions:
         - sdk_version: 3
@@ -836,6 +863,15 @@ glue_GetJobRun:
     glue: {GetJobRun}
 glue_DeleteJob:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.delete_job.main
     .NET:
       versions:
         - sdk_version: 3
@@ -961,6 +997,15 @@ glue_DeleteTable:
     glue: {DeleteTable}
 glue_DeleteDatabase:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.delete_database.main
     .NET:
       versions:
         - sdk_version: 3
@@ -1029,6 +1074,15 @@ glue_DeleteDatabase:
     glue: {DeleteDatabase}
 glue_DeleteCrawler:
   languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/glue
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - glue.java2.delete_crawler.main
     .NET:
       versions:
         - sdk_version: 3
