--- a/.doc_gen/metadata/iam_metadata.yaml
+++ b/.doc_gen/metadata/iam_metadata.yaml
@@ -3355,15 +3355,13 @@ iam_Scenario_GroupBasics:
     iam: {AddUserToGroup, CreateGroup, CreateUser, CreateAccessKey, CreateRole, CreatePolicy, AttachRolePolicy, PutGroupPolicy,
           DeleteGroup, DeleteGroupPolicy, DeleteAccessKey, DeleteUser, RemoveUserFromGroup}
 iam_Scenario_CreateUserAssumeRole:
-  title: Create an &IAM-user; and assume a role with &STS; using an &AWS; SDK
-  title_abbrev: Create a user and assume a role
   synopsis: create a user and assume a role. &aws_sec_sdk_use-federation-warning;
   synopsis_list:
     - Create a user with no permissions.
     - Create a role that grants permission to list &S3; buckets for the account.
     - Add a policy to let the user assume the role.
     - Assume the role and list S3 buckets using temporary credentials, then clean up resources.
-  category: Scenarios
+  category: Basics
   languages:
     .NET:
       versions:
