Squashed commit of the following:
commit 41c11de6e07ccb603f1f3cf15084c9310c4cfec5
Author: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>
Date:   Fri Sep 27 11:41:35 2024 -0500

    Update EC2 examples in ResilientService cross-service example.

commit bd61a697dd2ab89556041847cada872bf2651b59
Author: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>
Date:   Fri Sep 27 08:48:22 2024 -0500

    Updates to EC2 examples.

commit cd67ffb48a97a1eb1656089d7b2de324bb408773
Author: Rachel Hagerman <110480692+rlhagerm@users.noreply.github.com>
Date:   Tue Sep 24 08:30:40 2024 -0500

    WIP on EC2 updates.

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -470,6 +470,7 @@ ec2_StartInstances:
             - description:
               snippet_tags:
                 - EC2.dotnetv3.StartInstances
+                - EC2.dotnetv3.WaitForInstanceState
     Kotlin:
       versions:
         - sdk_version: 1
@@ -569,6 +570,7 @@ ec2_StopInstances:
             - description:
               snippet_tags:
                 - EC2.dotnetv3.StopInstances
+                - EC2.dotnetv3.WaitForInstanceState
     Kotlin:
       versions:
         - sdk_version: 1
@@ -1393,6 +1395,7 @@ ec2_TerminateInstances:
             - description:
               snippet_tags:
                 - EC2.dotnetv3.TerminateInstances
+                - EC2.dotnetv3.WaitForInstanceState
     Kotlin:
       versions:
         - sdk_version: 1
@@ -1682,9 +1685,10 @@ ec2_RebootInstances:
           github: dotnetv3/EC2
           sdkguide:
           excerpts:
-            - description:
+            - description: Reboot an instance by its Id.
               snippet_tags:
                 - EC2.dotnetv3.RebootInstances
+                - EC2.dotnetv3.WaitForInstanceState
             - description: Replace the profile for an instance, reboot, and restart a web server.
               snippet_tags:
                 - ResilientService.dotnetv3.Ec2.ReplaceInstanceProfile
