--- a/dotnetv3/cross-service/ResilientService/AutoScalerActions/AutoScalerActions.csproj
+++ b/dotnetv3/cross-service/ResilientService/AutoScalerActions/AutoScalerActions.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AWSSDK.IdentityManagement" Version="3.7.300.18" />
     <PackageReference Include="AWSSDK.SimpleSystemsManagement" Version="3.7.301.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
