--- a/python/example_code/bedrock-runtime/requirements.txt
+++ b/python/example_code/bedrock-runtime/requirements.txt
@@ -1,34 +1,35 @@
 beautifulsoup4==4.12.3
-boto3==1.34.127
-botocore==1.34.127
-certifi==2024.6.2
+boto3==1.35.28
+botocore==1.35.28
+certifi==2024.8.30
 charset-normalizer==3.3.2
 colorama==0.4.6
-contourpy==1.2.1
+contourpy==1.3.0
 cycler==0.12.1
-fonttools==4.53.0
+fonttools==4.54.1
 geojson==3.1.0
-idna==3.7
+idna==3.10
 iniconfig==2.0.0
 jmespath==1.0.1
-kiwisolver==1.4.5
-lxml==5.2.2
-matplotlib==3.9.0
-numpy==1.26.4
+kiwisolver==1.4.7
+lxml==5.3.0
+matplotlib==3.9.2
+numpy==2.1.1
 packaging==24.1
-pandas==2.2.2
-pillow==10.3.0
+pandas==2.2.3
+pillow==10.4.0
+pip-review==1.3.0
 pluggy==1.5.0
-pyparsing==3.1.2
-pytest==8.2.2
-pytest-asyncio==0.23.7
+pyparsing==3.1.4
+pytest==8.3.3
+pytest-asyncio==0.24.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2024.2
 requests==2.32.3
-s3transfer==0.10.1
+s3transfer==0.10.2
 six==1.16.0
-soupsieve==2.5
-tzdata==2024.1
+soupsieve==2.6
+tzdata==2024.2
 ujson==5.10.0
-urllib3==2.2.1
-xarray==2024.5.0
+urllib3==2.2.3
+xarray==2024.9.0
